Fixed navigation links

--- a/themes/openemr/src/scss/_variables.scss
+++ b/themes/openemr/src/scss/_variables.scss
@@ -121,6 +121,10 @@ $theme-colors: (
 $theme-color-interval: 8%;
 
 
+// Nav users
+$nav-default-margin-top: 25px;
+$nav-default-background-color: transparent;
+
 // Options
 //
 // Quickly modify global styling by enabling or disabling optional features.
