--- a/themes/openemr/src/scss/style.scss
+++ b/themes/openemr/src/scss/style.scss
@@ -29,21 +29,36 @@ body {}
     }
 }
 
+.arrow-up {
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid theme-color("primary");
+  position: absolute;
+  top: -10px;
+  left: 25px;
+}
+
 nav.main-header.nav-colored {
   background-color: rgba(theme-color("primary"), 0.90);
   transition: background-color 0.25s;
   transition: transform 0.10s;
   transform: scale(1);
+  margin-top: 0;
 }
 
 nav.main-header.nav-transparent {
+  margin-top: $nav-default-margin-top;
   background-color: transparent;
   transition: background-color 0.25s;
+  transition: margin-top 0.25s;
 }
 
 @include media-breakpoint-up(lg) {
   nav.main-header {
-    transform: scale(1.20);
+    transform: scale(1.10);
+    margin-top: $nav-default-margin-top;
   }
 }
 
