Year in review page

--- a/themes/openemr/layouts/index.html
+++ b/themes/openemr/layouts/index.html
@@ -1,6 +1,28 @@
-{{ partial "header.html" . }}
+{{ define "main" }}
 
-{{ partial "navigation.html" . }}
+<section class="home-billboard--year-in-review" style="background-image: url('{{ .Site.BaseURL }}year_in_review_bg.jpg');">
+  <div>
+    <div class="jumbotron">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12 col-md-6 offset-md-3 col-lg-6 offset-lg-0">
+            <div class="display-1">
+              <span class="year">2017</span>
+              <span class="title">Year in Review</span>
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-10 offset-md-1 col-lg-6 offset-lg-0">
+            <p class="description">
+              What a year for OpenEMR! Look back at some of our biggest accomplishments and see just how many cups of coffee it takes to power the world's leading open-source EMR.
+            </p>
+            <a class="look-back d-none d-lg-block" href="/year-in-review"><i class="fa fa-sm fa-undo"></i>&nbsp;Look back now</a>          
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <a class="look-back d-lg-none bottom" href="/year-in-review"><i class="fa fa-sm fa-undo"></i>&nbsp;Look back now</a>
+</section>
 
 <section class="home-billboard" style="background-image: url('{{ .Site.BaseURL }}img/jumbo2.jpg');">
   <div>
@@ -61,9 +83,7 @@
   </div>
 </section>
 
-
 <div class="main-content">
-
   <section class="onc align-items-center">
     <div class="col-xs-12 col-lg-5">
       <img src="{{ .Site.BaseURL }}/img/onc_certification_stacked.png" alt="" style="width:100%">
@@ -77,7 +97,6 @@
       </p>
     </div>
   </section>
-
 </div>
 
 <div class="parallax-container">
@@ -216,13 +235,11 @@
 </div>
 
 <div class="main-content">
-
   <section>
     <div class="col text-center">
       <h1 class="display-4">Who uses OpenEMR?</h1>
     </div>
   </section>
-
   <section class="highlighted-users">
     <div class="col">
       <img src="{{ .Site.BaseURL }}/img/IPPF-full-logo.png" alt="" height="70" class="">
@@ -234,7 +251,6 @@
       <img src="{{ .Site.BaseURL }}/img/siaya-district-hospital.jpg" alt="" height="70" class="">
     </div>
   </section>
-
 </div>
 
 <div class="parallax-container">
@@ -254,7 +270,6 @@
 </div>
 
 <div class="main-content">
-
   <section class="deploy">
     <div class="col text-center">
       <img src="{{ .Site.BaseURL }}/img/server.svg" alt="" height="128">
@@ -267,7 +282,6 @@
       <p>Deploy OpenEMR to the cloud</p>
     </div>
   </section>
-
   <section class="osi">
     <div class="col-sm-12 col-md-6">
       <h1 class="display-4">Open-Source</h1>
@@ -280,7 +294,5 @@
       <img src="{{ .Site.BaseURL }}/img/osi-certified.png" alt="" class="img-fluid">
     </div>
   </section>
-
 </div>
-
-{{ partial "footer.html" . }}
+{{ end }}
