--- a/themes/openemr/src/scss/_imports.scss
+++ b/themes/openemr/src/scss/_imports.scss
@@ -3,5 +3,7 @@
 // @import "~font-awesome/scss/font-awesome";
 @import "~bootstrap/scss/bootstrap";
 @import "variables";
-@import "holiday";
+@import "jumbotron";
+@import "nav";
+@import "yir";
 @import url('https://fonts.googleapis.com/css?family=Allura|Crimson+Text');
