--- a/themes/openemr/src/scss/style.scss
+++ b/themes/openemr/src/scss/style.scss
@@ -29,6 +29,12 @@ body {}
     }
 }
 
+main {
+  .container {
+    margin-top: 115px;
+  }
+}
+
 .arrow-up {
   width: 0;
   height: 0;
@@ -40,126 +46,6 @@ body {}
   left: 25px;
 }
 
-nav.main-header.nav-colored {
-  background-color: rgba(theme-color("primary"), 0.90);
-  transition: background-color 0.25s;
-  transition: transform 0.10s;
-  transform: scale(1);
-  margin-top: 0;
-}
-
-nav.main-header.nav-transparent {
-  margin-top: $nav-default-margin-top;
-  background-color: transparent;
-  transition: background-color 0.25s;
-  transition: margin-top 0.25s;
-}
-
-@include media-breakpoint-up(lg) {
-  nav.main-header {
-    transform: scale(1.10);
-    margin-top: $nav-default-margin-top;
-  }
-}
-
-nav.main-header {
-    @extend .navbar;
-    @extend .navbar-expand-lg;
-    @extend .navbar-dark;
-    @extend .fixed-top; // @extend .bg-primary;
-    transition: transform 0.10s;
-    .container {
-        padding-top: 1rem;
-        padding-bottom: 1rem;
-    }
-    a {
-        color: $white !important;
-        &:hover {
-            color: lighten($blue, 50) !important;
-        }
-    }
-}
-.nav-item {
-    color: $white;
-}
-#navbarSupportedContent {
-    @extend .collapse;
-    @extend .navbar-collapse;
-    @extend .justify-content-end;
-    ul {
-        @extend .navbar-nav;
-        li {
-            a {
-                @extend .nav-link;
-            }
-        }
-    }
-}
-.dropdown-menu {
-    background-color: $blue;
-    a:hover {
-        background-color: $blue;
-        color: darken($white, 30);
-    }
-}
-.home-billboard {
-    padding-bottom: 4rem;
-    color: $white;
-    min-height: 100vh;
-    background-color: color("gray");
-    background-repeat: no-repeat;
-    background-position: top center;
-    -webkit-background-size: cover;
-    background-size: cover;
-    @include media-breakpoint-down(sm) {
-        background-image: none !important;
-        background-color: $gray !important;
-    }
-    .jumbotron {
-        padding-top: 10rem;
-        color: $white;
-        background: none;
-        .display-4 {
-            text-shadow: 2px 2px 0 $black;
-            line-height: 1.35em;
-            font-family: $headings-font-family;
-            font-weight: 300 !important;
-        }
-        p.lead {
-            @include media-breakpoint-down(sm) {
-                display: none;
-            }
-        }
-    }
-    .banner-items {
-        @extend .container;
-        .card-holders {
-            @extend .row;
-            .card {
-                @extend .text-white;
-                @extend .text-center;
-                @extend .bg-primary;
-                background-color: rgba(46, 155, 214, 0.40) !important;
-                transition: background-color 0.25s;
-                &:hover {
-                    @include transition(0.25s);
-                    background-color: rgb(46, 155, 214) !important;
-                }
-                a {
-                    color: $white;
-                    &:hover {
-                        text-decoration: none;
-                    }
-                }
-                .card-body {
-                    img {
-                        padding-bottom: 1rem;
-                    }
-                }
-            }
-        }
-    }
-}
 .highlighted-users {
     @extend .container;
     .col {
