More minor last minute changes

--- a/layouts/page/year-in-review.html
+++ b/layouts/page/year-in-review.html
@@ -1,8 +1,6 @@
 {{ define "main" }}
 <div class="cover-image d-flex justify-content-center" style="background-position: static; background-image: url('{{ .Site.BaseURL }}year_in_review_bg.jpg');">
-  <h1 class="align-self-center display-4 text-center">
-    <span class="year">2017</span> Year in Review
-  </h1>
+  <h1 class="align-self-center display-4 text-center"><span class="year">2017</span> Year in Review</h1>
 </div>
 <div class="container-fluid yir">
   <div class="row numbers text-center">
@@ -22,7 +20,7 @@
       <h2>Pull Requests</h2>
     </div>
     <div class="col-xs-12 col-md-2">
-      <h3>25,000*</h3>
+      <h3>25,000<small class="text-muted">*</small></h3>
       <h2>Cups of Coffee</h2>
     </div>
   </div>
@@ -32,15 +30,16 @@
     </div>
     <div class="col-xs-12 col-md-6 col-xl-4 offset-xl-2 text-right">
       <p>
-        In MONTH of 2017 OpenEMR achieved full Meaningful Use 2 certification. 
+        In February of 2017 OpenEMR achieved full Meaningful Use 2 certification. 
         This was a large step to ensuring the long-term viability of OpenEMR for
         use inside the United States. Of course, such stringent specifications only
         aid to improve our product globally, and we have seen positive outcomes
         both within the U.S. as well as internationally after acheiving this goal.
       </p>
       <p>
-        Paragraph here of how many people contributed as well as the money raised
-        to acheive this goal.
+        Dr. Brady Miller, one of the project administrators for OpenEMR estimated
+        that the community spent over $200,000 on the certification process, including
+        testing with an estimated 80-85 work weeks of time spent on the process.
       </p>
     </div>
     <div class="col-xs-12 col-md-6 col-xl-4 align-self-center">
