Last minute fixes and review

--- a/layouts/page/year-in-review.html
+++ b/layouts/page/year-in-review.html
@@ -16,7 +16,7 @@
       <h2>Contributors</h2>
     </div>
     <div class="col-xs-12 col-md-2">
-      <h3 id="pull-requests">32</h3>
+      <h3 id="pull-requests">683</h3>
       <h2>Pull Requests</h2>
     </div>
     <div class="col-xs-12 col-md-2">
@@ -55,7 +55,7 @@
     </div>
     <div class="col-xs-12 col-md-6 col-xl-4 text-left">
       <p>
-        We know talking about containers and virtualization can be a bit dry, but
+        We know talking about images and containers can be a bit dry, but
         throughout 2017 the community spent <strong>a lot</strong> of time working and discussing
         "dockerizing" OpenEMR - this process marks a significant departure from
         traditional installation processes and offers users a significantly simpler
@@ -85,7 +85,7 @@
       <p>Cloud technologies have become a staple in technology and business over the past
       decade, and the healthcare industry is no exception. As a web platform, OpenEMR
       makes a seamless transition to the cloud, enabling many benefits including:
-      cutting-edge information security, zero on-site hardare and software, easy deployment, 
+      cutting-edge information security, zero on-site hardware and software, easy deployment, 
       and robust backup and recovery solutions.
       </p>
     </div>
