--- a/themes/openemr/layouts/partials/header.html
+++ b/themes/openemr/layouts/partials/header.html
@@ -7,11 +7,10 @@
   <meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{ if .IsPage }}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}{{ end }}">
   <meta name="HandheldFriendly" content="True">
   <meta name="MobileOptimized" content="320">
-  {{ .Hugo.Generator }}
   <meta name="robots" content="index,follow">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   {{ if .Site.Params.opengraph }} {{ partial "opengraph.html" . }} {{ end }}
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}css/style.css">
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}style.css?v={{ .GitInfo.AbbreviatedHash }}">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   {{ if .RSSLink }}
