--- a/themes/openemr/src/scss/_imports.scss
+++ b/themes/openemr/src/scss/_imports.scss
@@ -1,5 +1,5 @@
 
-// @import "aleo";
+@import "aleo";
 // @import "~font-awesome/scss/font-awesome";
 @import "~bootstrap/scss/bootstrap";
 @import "variables";
