--- a/themes/openemr/layouts/partials/header.html
+++ b/themes/openemr/layouts/partials/header.html
@@ -10,7 +10,7 @@
   <meta name="robots" content="index,follow">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   {{ if .Site.Params.opengraph }} {{ partial "opengraph.html" . }} {{ end }}
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}style.css?v={{ .GitInfo.AbbreviatedHash }}">
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}style.css?v=24">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   {{ if .RSSLink }}
