Adding Brady fixes

--- a/themes/openemr/layouts/index.html
+++ b/themes/openemr/layouts/index.html
@@ -48,7 +48,7 @@
           <div class="card">
             <a href="{{ .Site.Params.demoUrl }}">
               <div class="card-body">
-                <img class="img-fluid center" src="{{ .Site.BaseURL }}/img/monitor.png" alt="Card image cap" height="64" width="64">
+                <img class="img-fluid center" src="{{ .Site.BaseURL }}img/monitor.png" alt="Card image cap" height="64" width="64">
                 <h4 class="card-title">Try Now</h4>
                 <p class="card-text">Login to a fully functioning demo of the latest version of OpenEMR</p>
               </div>
@@ -59,7 +59,7 @@
           <div class="card">
             <a href="{{ .Site.Params.downloadUrl }}">
               <div class="card-body">
-                <img class="img-fluid center" src="{{ .Site.BaseURL }}/img/download-arrow.png" alt="Card image cap" height="64" width="64">
+                <img class="img-fluid center" src="{{ .Site.BaseURL }}img/download-arrow.png" alt="Card image cap" height="64" width="64">
                 <h4 class="card-title">Download a Free Copy</h4>
                 <p class="card-text">Download our latest version for your platform</p>
               </div>
@@ -70,7 +70,7 @@
           <div class="card">
             <a href="/wiki/index.php/Support">
               <div class="card-body">
-                <img class="img-fluid center" src="{{ .Site.BaseURL }}/img/info.png" alt="Card image cap" height="64" width="64">
+                <img class="img-fluid center" src="{{ .Site.BaseURL }}img/info.png" alt="Card image cap" height="64" width="64">
                 <h4 class="card-title">Find Support</h4>
                 <p class="card-text">Use our vibrant community to get help with your OpenEMR questions</p>
               </div>
@@ -86,7 +86,7 @@
 <div class="main-content">
   <section class="onc align-items-center">
     <div class="col-xs-12 col-lg-5">
-      <img src="{{ .Site.BaseURL }}/img/onc_certification_stacked.png" alt="" style="width:100%">
+      <img src="{{ .Site.BaseURL }}img/onc_certification_stacked.png" alt="" style="width:100%">
     </div>
     <div class="col xs-12 col-lg-7">
       <h1 class="display-4">Leading the way.<br>Meaningful Use 2 certified</h1>
@@ -101,7 +101,7 @@
 
 <div class="parallax-container">
   <div class="parallax">
-    <img src="{{ .Site.BaseURL }}/img/stethoscope.jpg">
+    <img src="{{ .Site.BaseURL }}img/stethoscope.jpg">
   </div>
 </div>
 
@@ -112,15 +112,15 @@
       <h1 class="display-4 text-center">A feature-rich solution</h1>
       <p class="lead">
         Our vibrant community of volunteers and contributors have maintained critical OpenEMR features for over a decade. With over
-        <a class="underline" href="{{ .Site.BaseURL }}/wiki/index.php/OpenEMR_Features#Multilanguage_Support">30 supported languages</a>,
+        <a class="underline" href="{{ .Site.BaseURL }}wiki/index.php/OpenEMR_Features#Multilanguage_Support">30 supported languages</a>,
         many customizations, and full data ownership, OpenEMR's features shine. On top of this, users in need of
         support can take advantage of our <a class="underline" href="https://community.open-emr.org">volunteer support network</a>
-        as well as over <a class="underline" href="{{ .Site.BaseURL }}/wiki/index.php/OpenEMR_Professional_Support">30 vendors in over 10 countries.</a>
+        as well as over <a class="underline" href="{{ .Site.BaseURL }}wiki/index.php/OpenEMR_Professional_Support">30 vendors in over 10 countries.</a>
       </p>
     </div>
     <div class="card-holder">
       <div class="card">
-        <img class="" src="{{ .Site.BaseURL }}/img/calendar.svg" alt="Card image cap">
+        <img class="" src="{{ .Site.BaseURL }}img/calendar.svg" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Scheduling</h4>
           <hr>
@@ -134,7 +134,7 @@
     </div>
     <div class="card-holder">
       <div class="card">
-        <img class="" src="{{ .Site.BaseURL }}/img/prescription.svg" alt="Card image cap">
+        <img class="" src="{{ .Site.BaseURL }}img/prescription.svg" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">e-Prescribing</h4>
           <hr>
@@ -147,7 +147,7 @@
     </div>
     <div class="card-holder">
       <div class="card">
-        <img class="" src="{{ .Site.BaseURL }}/img/invoice.svg" alt="Card image cap">
+        <img class="" src="{{ .Site.BaseURL }}img/invoice.svg" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Medical Billing</h4>
           <hr>
@@ -159,7 +159,7 @@
     </div>
     <div class="card-holder">
       <div class="card">
-        <img class="" src="{{ .Site.BaseURL }}/img/medical-report.svg" alt="Card image cap">
+        <img class="" src="{{ .Site.BaseURL }}img/medical-report.svg" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">CMS Reporting</h4>
           <hr>
@@ -172,7 +172,7 @@
     </div>
     <div class="card-holder">
       <div class="card">
-        <img class="" src="{{ .Site.BaseURL }}/img/vaccine.svg" alt="Card image cap">
+        <img class="" src="{{ .Site.BaseURL }}img/vaccine.svg" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Lab Integration</h4>
           <hr>
@@ -186,7 +186,7 @@
     </div>
     <div class="card-holder">
       <div class="card">
-        <img class="" src="{{ .Site.BaseURL }}/img/flowchart.svg" alt="Card image cap">
+        <img class="" src="{{ .Site.BaseURL }}img/flowchart.svg" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Clinical Decision Rules</h4>
           <hr>
@@ -200,7 +200,7 @@
     </div>
     <div class="card-holder">
       <div class="card">
-        <img class="" src="{{ .Site.BaseURL }}/img/padlock.svg" alt="Card image cap">
+        <img class="" src="{{ .Site.BaseURL }}img/padlock.svg" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Advanced Security</h4>
           <hr>
@@ -214,7 +214,7 @@
     </div>
     <div class="card-holder">
       <div class="card">
-        <img class="" src="{{ .Site.BaseURL }}/img/earth.svg" alt="Card image cap">
+        <img class="" src="{{ .Site.BaseURL }}img/earth.svg" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Multilingual Support</h4>
           <hr>
@@ -230,7 +230,7 @@
 
 <div class="parallax-container">
   <div class="parallax">
-    <img src="{{ .Site.BaseURL }}/img/hospital.jpg">
+    <img src="{{ .Site.BaseURL }}img/hospital.jpg">
   </div>
 </div>
 
@@ -242,20 +242,20 @@
   </section>
   <section class="highlighted-users">
     <div class="col">
-      <img src="{{ .Site.BaseURL }}/img/IPPF-full-logo.png" alt="" height="70" class="">
+      <img src="{{ .Site.BaseURL }}img/IPPF-full-logo.png" alt="" height="70" class="">
     </div>
     <div class="col">
-      <img src="{{ .Site.BaseURL }}/img/peace-corps.png" alt="" height="70" class="">
+      <img src="{{ .Site.BaseURL }}img/peace-corps.png" alt="" height="70" class="">
     </div>
     <div class="col">
-      <img src="{{ .Site.BaseURL }}/img/siaya-district-hospital.jpg" alt="" height="70" class="">
+      <img src="{{ .Site.BaseURL }}img/siaya-district-hospital.jpg" alt="" height="70" class="">
     </div>
   </section>
 </div>
 
 <div class="parallax-container">
   <div class="parallax">
-    <img src="{{ .Site.BaseURL }}/img/md-with-ipad.jpg" alt="">
+    <img src="{{ .Site.BaseURL }}img/md-with-ipad.jpg" alt="">
   </div>
 </div>
 
@@ -265,19 +265,19 @@
 
 <div class="parallax-container">
   <div class="parallax">
-    <img src="{{ .Site.BaseURL }}/img/screen.jpg" alt="">
+    <img src="{{ .Site.BaseURL }}img/screen.jpg" alt="">
   </div>
 </div>
 
 <div class="main-content">
   <section class="deploy">
     <div class="col text-center">
-      <img src="{{ .Site.BaseURL }}/img/server.svg" alt="" height="128">
+      <img src="{{ .Site.BaseURL }}img/server.svg" alt="" height="128">
       <h2 class="display-4">On-Premise</h2>
       <p>Run OpenEMR on your own servers on location</p>
     </div>
     <div class="col text-center">
-      <img src="{{ .Site.BaseURL }}/img/cloud.svg" alt="" height="128">
+      <img src="{{ .Site.BaseURL }}img/cloud.svg" alt="" height="128">
       <h2 class="display-4">Cloud-based</h2>
       <p>Deploy OpenEMR to the cloud</p>
     </div>
@@ -291,7 +291,7 @@
       </p>
     </div>
     <div class="col text-center">
-      <img src="{{ .Site.BaseURL }}/img/osi-certified.png" alt="" class="img-fluid">
+      <img src="{{ .Site.BaseURL }}img/osi-certified.png" alt="" class="img-fluid">
     </div>
   </section>
 </div>
