--- a/layouts/section/demo.html
+++ b/layouts/section/demo.html
@@ -1,7 +1,7 @@
 {{ define "main"}}
 <div style="margin-top: 98px">
   
-  <div class="container">
+  <div class="container page">
     <div class="row">
       <div class="col-xs-12 col-md-8 offset-md-2">
         <p>{{ .Content }}</p>
@@ -12,6 +12,10 @@
 <style type="text/css">
   table tr td {
     padding: 2px 8px;
+  }
+  table tr td,
+  table tr th {
+    padding-right: 15px;
   }
   table tr td:first-child {
     text-align: right;
