--- a/themes/openemr/src/scss/style.scss
+++ b/themes/openemr/src/scss/style.scss
@@ -188,3 +188,39 @@ footer.site {
         font-size: 1.5rem;
     }
 }
+
+.page {
+  h3 {
+    font-weight: 300;
+    margin-top: 2rem;
+  }
+  h1, h2, h4, h5, h6 {
+    @extend .pt-3;
+    @extend .mb-3;
+    font-weight: 300;
+    color: #000;
+
+    &::after {
+      background-color: $red;
+      bottom: 0;
+      text-align: left;
+      content: '';
+      display: block;
+      height: 4px;
+      left: 0;
+      top: 5px;
+      position: relative;
+      width: 70px;
+    }
+  }
+
+  a {
+    text-decoration: underline;
+  }
+
+  h2 { font-size: 3rem; }
+  h3 { font-size: 1.8rem; }
+  h4 { font-size: 1.6rem; }
+  h5 { font-size: 1.4rem; }
+  h6 { font-size: 1.2rem; }
+}
