--- a/themes/openemr/static/style.css
+++ b/themes/openemr/static/style.css
@@ -4915,7 +4915,7 @@ a.bg-dark:focus, a.bg-dark:hover {
 .mx-3 {
   margin-right: 1rem !important; }
 
-.mb-3,
+.mb-3, .page h1, .page h2, .page h4, .page h5, .page h6,
 .my-3 {
   margin-bottom: 1rem !important; }
 
@@ -5021,7 +5021,7 @@ a.bg-dark:focus, a.bg-dark:hover {
 .p-3 {
   padding: 1rem !important; }
 
-.pt-3,
+.pt-3, .page h1, .page h2, .page h4, .page h5, .page h6,
 .py-3 {
   padding-top: 1rem !important; }
 
@@ -6340,3 +6340,40 @@ footer.site {
 @media (min-width: 576px) and (max-width: 767px) {
   .display-4 {
     font-size: 1.5rem; } }
+
+.page h3 {
+  font-weight: 300;
+  margin-top: 2rem; }
+
+.page h1, .page h2, .page h4, .page h5, .page h6 {
+  font-weight: 300;
+  color: #000; }
+  .page h1::after, .page h2::after, .page h4::after, .page h5::after, .page h6::after {
+    background-color: #a50f00;
+    bottom: 0;
+    text-align: left;
+    content: '';
+    display: block;
+    height: 4px;
+    left: 0;
+    top: 5px;
+    position: relative;
+    width: 70px; }
+
+.page a {
+  text-decoration: underline; }
+
+.page h2 {
+  font-size: 3rem; }
+
+.page h3 {
+  font-size: 1.8rem; }
+
+.page h4 {
+  font-size: 1.6rem; }
+
+.page h5 {
+  font-size: 1.4rem; }
+
+.page h6 {
+  font-size: 1.2rem; }
