--- a/themes/openemr/layouts/index.html
+++ b/themes/openemr/layouts/index.html
@@ -128,7 +128,7 @@
           <h4 class="card-title">Medical Billing</h4>
           <hr>
           <p class="card-text">
-            Export billing data in standardized, including X12.
+            Integrated billing supporting HIPAA ASC X12 Version 5010 Transaction and Code Set Standards.
           </p>
         </div>
       </div>
