--- a/themes/openemr/src/scss/_jumbotron.scss
+++ b/themes/openemr/src/scss/_jumbotron.scss
@@ -56,3 +56,13 @@
         }
     }
 }
+
+
+.welcome-billboard {
+  @extend .home-billboard;
+  margin-top: 98px;
+  height: 500px;
+  min-height: 500px;
+  -webkit-background-size: cover;
+    background-size: cover;
+}
