--- a/themes/openemr/layouts/welcome/list.html
+++ b/themes/openemr/layouts/welcome/list.html
@@ -6,7 +6,7 @@
 
 <div class="main-content page">
   <div class="row">
-    <div class="col-8 offset-2">
+    <div class="col-md-8 offset-md-2 col-xs-12">
       {{ .Content }}
     </div>
   </div>
