--- a/themes/openemr/layouts/partials/navigation.html
+++ b/themes/openemr/layouts/partials/navigation.html
@@ -14,6 +14,7 @@
         <li class="site-nav-item"><a class="nav-link" href="https://www.open-emr.org/wiki/index.php/OpenEMR_Features">Features</a></li>
         <li class="site-nav-item"><a class="nav-link" href="{{ .Site.Params.demoURL | absURL }}">Demo</a></li>
         <li class="site-nav-item"><a class="nav-link" href="https://www.open-emr.org/wiki/index.php/OpenEMR_Downloads">Downloads</a></li>
+        <li class="site-nav-item"><a class="nav-link" href="https://www.open-emr.org/blog">Blog</a></li>
         <li class="site-nav-item"><a class="nav-link" href="https://www.open-emr.org/wiki">Wiki</a></li>
         <li class="site-nav-item"><a class="nav-link" href="https://community.open-emr.org/">Forum</a></li>
         <li class="site-nav-item"><a class="nav-link" href="https://chat.open-emr.org/">Chat</a></li>
