--- a/themes/openemr/layouts/partials/header.html
+++ b/themes/openemr/layouts/partials/header.html
@@ -15,15 +15,15 @@
 {{- if .RSSLink -}}
 <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml">
 {{- end -}}
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=vMO5ypXxXd">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=vMO5ypXxXd">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=vMO5ypXxXd">
-<link rel="manifest" href="/manifest.json?v=vMO5ypXxXd">
-<link rel="mask-icon" href="/safari-pinned-tab.svg?v=vMO5ypXxXd" color="#2d9bd6">
-<link rel="shortcut icon" href="/favicon.ico?v=vMO5ypXxXd">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=pgq70jawxe">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=pgq70jawxe">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=pgq70jawxe">
+<link rel="manifest" href="/site.webmanifest?v=pgq70jawxe">
+<link rel="mask-icon" href="/safari-pinned-tab.svg?v=pgq70jawxe" color="#2e9bd6">
+<link rel="shortcut icon" href="/favicon.ico?v=pgq70jawxe">
 <meta name="apple-mobile-web-app-title" content="OpenEMR">
 <meta name="application-name" content="OpenEMR">
-<meta name="msapplication-TileColor" content="#2d9bd6">
-<meta name="msapplication-TileImage" content="/mstile-144x144.png?v=vMO5ypXxXd">
+<meta name="msapplication-TileColor" content="#2d89ef">
+<meta name="msapplication-TileImage" content="/mstile-144x144.png?v=pgq70jawxe">
 <meta name="theme-color" content="#2d9bd6">
 <script src="{{ .Site.BaseURL }}bundle.js"></script>
