Updating the typography (#20)

--- a/themes/openemr/layouts/index.html
+++ b/themes/openemr/layouts/index.html
@@ -4,7 +4,7 @@
   <div>
     <div class="jumbotron">
       <div class="container">
-        <h3 class="display-4">
+        <h3 class="display-1">
           Fully Open-Source.<br>
           Free, Always and Forever.<br>
           2014 ONC Complete EHR Certified.<br>
@@ -37,7 +37,7 @@
               <div class="card-body">
                 <img class="img-fluid center" src="{{ .Site.BaseURL }}img/download-arrow.png" alt="Card image cap" height="64" width="64">
                 <h4 class="card-title">Download for Free</h4>
-                <p class="card-text">Download our latest version for Windows, macOS, or Linux</p>
+                <p class="card-text">Get the latest version for Windows, macOS, or Linux</p>
               </div>
             </a>
           </div>
@@ -59,7 +59,7 @@
               <div class="card-body">
                 <img class="img-fluid center" src="{{ .Site.BaseURL }}img/money.png" alt="Card image cap" height="64">
                 <h4 class="card-title">Donate Today</h4>
-                <p class="card-text">We depend on financial donations to thrive</p>
+                <p class="card-text">We depend on financial donations to succeed.</p>
               </div>
             </a>
           </div>
@@ -76,7 +76,7 @@
       <img src="{{ .Site.BaseURL }}img/onc_certification_stacked.png" alt="" style="width:100%">
     </div>
     <div class="col xs-12 col-lg-7">
-      <h1 class="display-4">Leading the way.<br>Meaningful Use 2 certified</h1>
+      <h1 class="display-3">Leading the way.<br>Meaningful Use 2 certified</h1>
       <p class="lead">
         OpenEMR is an ONC Certified HIT 2014 Edition Complete EHR
         product. We take pride in being one of the only open-source
@@ -96,7 +96,7 @@
 
   <section class="features" id="features">
     <div class="col-xs-12">
-      <h1 class="display-4 text-center">A feature-rich solution</h1>
+      <h1 class="display-3 text-center">A feature-rich solution</h1>
       <p class="lead">
         Our vibrant community of volunteers and contributors have maintained critical OpenEMR features for over a decade. With over
         <a class="underline" href="{{ .Site.BaseURL }}wiki/index.php/OpenEMR_Features#Multilanguage_Support">30 supported languages</a>,
@@ -224,7 +224,7 @@
 <div class="main-content">
   <section>
     <div class="col text-center">
-      <h1 class="display-4">Who uses OpenEMR?</h1>
+      <h1 class="display-3">Who uses OpenEMR?</h1>
     </div>
   </section>
   <section class="highlighted-users">
