--- a/themes/openemr/src/scss/_jumbotron.scss
+++ b/themes/openemr/src/scss/_jumbotron.scss
@@ -13,6 +13,7 @@
     }
     .jumbotron {
         padding-top: 10rem;
+        padding-bottom: 0;
         color: $white;
         background: none;
         .display-4 {
