--- a/themes/openemr/src/scss/_variables.scss
+++ b/themes/openemr/src/scss/_variables.scss
@@ -252,7 +252,7 @@ $transition-collapse:    height .35s ease;
 //
 // Font, line-height, and color for body text, headings, and more.
 
-$font-family-sans-serif: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+$font-family-sans-serif: "IBM Plex Sans", "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 $font-family-monospace:  "IBM Plex Mono", "SFMono-Regular", Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 $font-family-base:       $font-family-sans-serif;
 
@@ -268,15 +268,16 @@ $font-weight-bold: bold;
 $font-weight-base: $font-weight-normal;
 $line-height-base: 1.5;
 
-$h1-font-size: 2.5rem;
-$h2-font-size: 2rem;
-$h3-font-size: 1.75rem;
-$h4-font-size: 1.5rem;
-$h5-font-size: 1.25rem;
-$h6-font-size: 1rem;
+$h1-font-size: 1.6rem;
+$h2-font-size: 1.5rem;
+$h3-font-size: 1.4rem;
+$h4-font-size: 1.3rem;
+$h5-font-size: 1.2rem;
+$h6-font-size: 1.1rem;
 
 $headings-margin-bottom: ($spacer / 2);
-$headings-font-family:   "cooper_hewitt", Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;;
+//$headings-font-family:   "cooper_hewitt", Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+$headings-font-family:   $font-family-sans-serif;
 $headings-font-weight:   500;
 $headings-line-height:   1.1;
 $headings-color:         inherit;
