--- a/themes/openemr/src/scss/style.scss
+++ b/themes/openemr/src/scss/style.scss
@@ -130,10 +130,12 @@ footer.site {
     &:hover {
         @include transition(all 0.25s);
         background-color: $gray-300;
+        border-radius: 20px;
     }
     .card {
         @extend .m-4;
         border: none;
+        border-radius: 20px;
         background: none;
         .card-title {
             @extend .text-center;
@@ -147,6 +149,19 @@ footer.site {
     }
   }
 }
+
+.display-1 {
+    // font-family: "cooper_hewitt";
+    font-weight: 200;
+    font-size: 3.5rem;
+}
+
+.display-3 {
+    font-size: 2.5rem;
+    font-weight: 300;
+    color: theme-color("primary");
+}
+
 .deploy {
     img {
         height: 64px;
@@ -197,14 +212,14 @@ footer.site {
 }
 
 .page {
-  h3 {
-    font-weight: 300;
-    margin-top: 2rem;
-  }
+  // h3 {
+  //   font-weight: 300;
+  //   margin-top: 2rem;
+  // }
   h1, h2, h4, h5, h6 {
     @extend .pt-3;
     @extend .mb-3;
-    font-weight: 300;
+    font-weight: 500;
     color: #000;
 
     &::after {
@@ -213,11 +228,11 @@ footer.site {
       text-align: left;
       content: '';
       display: block;
-      height: 4px;
+      height: 1px;
       left: 0;
       top: 5px;
       position: relative;
-      width: 70px;
+      width: 3rem;
     }
   }
 
@@ -225,9 +240,16 @@ footer.site {
     text-decoration: underline;
   }
 
-  h2 { font-size: 3rem; }
-  h3 { font-size: 1.8rem; }
-  h4 { font-size: 1.6rem; }
-  h5 { font-size: 1.4rem; }
-  h6 { font-size: 1.2rem; }
+  h1 { font-size: 2rem; font-weight: 400; }
+  h2 { font-size: 1.5rem; }
+  h3 { font-size: 1.4rem; font-weight: 500; }
+  h4 { font-size: 1.3rem; }
+  h5 { font-size: 1.2rem; }
+  h6 { font-size: 1.1rem; }
+
+  // h2 { font-size: 3rem; }
+  // h3 { font-size: 1.8rem; }
+  // h4 { font-size: 1.6rem; }
+  // h5 { font-size: 1.4rem; }
+  // h6 { font-size: 1.2rem; }
 }
