--- a/themes/openemr/layouts/partials/header.html
+++ b/themes/openemr/layouts/partials/header.html
@@ -11,13 +11,13 @@
   {{- partial "opengraph.html" . -}}
 {{- end -}}
 
-<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,400i,700,700i|IBM+Plex+Sans:200,300,400,400i,500,700,700i|IBM+Plex+Sans+Condensed:400,500" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,400i,700,700i|IBM+Plex+Sans+Condensed|IBM+Plex+Sans:200,200i,300,300i,400,400i,500,500i,700,700i" rel="stylesheet"> 
 <link href="{{ "fonts/cooper_hewitt/cooper_hewitt.css" | absURL }}" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="{{ .Site.BaseURL }}style.css?v=29">
+<link rel="stylesheet" href="{{ .Site.BaseURL }}style.css?v=G6iPNTDY">
 
 {{- if .RSSLink -}}
-  <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml">
+<link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml">
 {{- end -}}
 
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=pgq70jawxe">
