--- a/themes/openemr/src/scss/_imports.scss
+++ b/themes/openemr/src/scss/_imports.scss
@@ -1,6 +1,8 @@
 @import "~bootstrap/scss/bootstrap";
 @import "mixins";
 @import "variables";
+@import "type";
+@import "colors";
 @import "jumbotron";
 @import "nav";
 @import "blog";
