--- a/themes/openemr/layouts/blog/single.html
+++ b/themes/openemr/layouts/blog/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<main class="body blog single-post">
+<main class="page blog single-post">
     <article class="justify-content-center">
         {{ partial "blog/page-header.html" . }}
         {{ partial "blog/page-content.html" . }}
