--- a/themes/openemr/layouts/partials/blog/post-stub.html
+++ b/themes/openemr/layouts/partials/blog/post-stub.html
@@ -1,4 +1,21 @@
-<li class="media post-stub mb-5" itemprop="blogPost" itemscope="" itemtype="https://schema.org/BlogPosting">
+<div class="col-sm-12 col-md-6 mb-4" 
+     itemprop="blogPost" 
+     itemscope="" 
+     itemtype="https://schema.org/BlogPosting">
+    <div class="post-stub">
+        <a href="{{ .URL }}" title="{{ .Title }}" class="image-link">
+            <span class="image-gradient"></span>
+            <img src="{{ $.Params.coverImage | absURL }}" alt="{{ .Title }}">
+        </a>
+        <div class="title-link">
+            <a href="{{ .URL }}" itemprop="url" title="Go to {{ .Title }}">
+                <h5>{{ .Title }}</h5>
+            </a>
+        </div>
+    </div>
+</div>
+
+<!-- <li class="media hidden post-stub mb-5" itemprop="blogPost" itemscope="" itemtype="https://schema.org/BlogPosting">
     {{ if .Params.coverImage }}
         <img class="mr-2" src="{{ .Site.BaseURL }}{{ $.Params.coverImage }}" width="200" alt="Card image cap">
     {{ else }}
@@ -14,3 +31,4 @@
         {{ end }}
     </div>
 </li>
+ -->
