--- a/themes/openemr/src/scss/_blog.scss
+++ b/themes/openemr/src/scss/_blog.scss
@@ -1,3 +1,5 @@
+// ALL blog related styles are here, type and colors included
+
 .blog-list {
     margin-top: 25px;
     .media {
@@ -15,14 +17,88 @@
     }
 }
 
+.post-stub {
+    display: inline-block;
+    overflow: hidden;
+    max-height: 400px;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    top: 0;
+
+    a.image-link {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        display: block;
+
+        &:hover {
+            &::before {
+                background-color: transparent;
+            }
+        }
+
+        // Darken the image by default
+        &::before {
+            background-color: rgba(0,0,0, 0.20);
+            content: "";
+            display: block;
+            height: 100%;
+            left: 0;
+            position: absolute;
+            top: 0;
+            width: 100%;
+            z-index: 2;
+
+            // For hover transition
+            -webkit-transition: background-color .15s ease-out;
+            -moz-transition: background-color .15s ease-out;
+            transition: background-color .15s ease-out;
+        }
+
+        // Add a gradient to ensure readability of title
+        .image-gradient {
+            @include linear-gradient(rgba(255,255,255,0), 0%, rgba(0,0,0,0.75), 100%);
+            display: block;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            height: 60%;
+            width: 100%;
+            z-index: 3;
+        }
+
+        img {
+            @extend .img-fluid;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+        }
+    }
+
+    .title-link {
+        
+        a {
+            text-decoration: none;
+
+            h5 {
+                color: $white !important;
+            }
+        }
+        
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        padding: 15px;
+        z-index: 5;
+    }
+}
+
 .blog .standard {
     header h1 {
         font-weight: 300;
     }
-}
-
-.blog.single-post {
-    margin-top: 98px;
 }
 
 article.post-container {
@@ -42,6 +118,10 @@ section.sidebar {
     @include center-column();
     @extend .text-center;
     @extend .my-5;
+
+    h1 {
+        color: $white;
+    }
 }
 .cover {
     @extend .align-items-center;
@@ -53,12 +133,24 @@ section.sidebar {
     @include media-breakpoint-up(md) {
         height: 525px;
     }
-    @extend .mb-5;
+    @extend .mb-3;
 
     color: $white;
     position: relative;
     background-position: 50% 50%;
     background-size: cover;
+
+    &::before {
+        display: block;
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0,0,0,0.55);
+        z-index: 0;
+    }
 
     header.post-header {
         @include center-column();
@@ -68,15 +160,12 @@ section.sidebar {
 
         h1 {
             @include media-breakpoint-down(md) {
-                padding: .75rem .5rem !important;
+                font-size: 1.75rem;
             }
-            @extend .p-5;
             @extend .d-block;
             text-align: left;
             font-size: 2.25rem;
             font-weight: 300;
-            border-radius: 20px;
-            background: rgba(theme-color-level("primary", 5), 0.75);
         }
     }
 
