--- a/themes/openemr/src/scss/_mixins.scss
+++ b/themes/openemr/src/scss/_mixins.scss
@@ -9,3 +9,11 @@
         @include make-col(6);
     }
 }
+
+@mixin linear-gradient($from, $start_pos, $to, $end_pos) {
+    background: $from; /* Old browsers */
+    background: -moz-linear-gradient(top, $from $start_pos, $to $end_pos); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, $from $start_pos,$to $end_pos); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, $from $start_pos,$to $end_pos); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr=$from, endColorstr=$end,GradientType=0 ); /* IE6-8 */
+}
