--- a/themes/openemr/src/scss/_nav.scss
+++ b/themes/openemr/src/scss/_nav.scss
@@ -1,44 +1,34 @@
-nav.main-header.home {
-  background-color: transparent;
-  transition: background-color 0.25s;
-  transform: scale (1);
-  margin-top: $nav-default-margin-top
+.main-header.home {
+  @extend .armed-state;
 }
 
-nav.main-header.home.nav-colored {
-  background-color: rgba(theme-color("primary"), 0.90);
-  transition: background-color 0.25s;
-  transition: transform 0.10s;
-  transform: scale(1);
-  margin-top: 0;
-}
-
-nav.main-header.home.nav-transparent {
-  margin-top: $nav-default-margin-top;
-  background-color: transparent;
-  transition: background-color 0.25s;
-  transition: margin-top 0.25s;
-}
-
-@include media-breakpoint-up(xl) {
-  nav.main-header {
-    transform: scale(1.10);
-    margin-top: $nav-default-margin-top;
+.default-state {
+  background-color: rgba(theme-color("primary"), 0.90) !important;
+  @include media-breakpoint-down(md) {
+    background-color: theme-color("primary") !important;
   }
 }
 
-nav.main-header {
+.armed-state {
+  background-color: transparent;
+  @include media-breakpoint-down(md) {
+    background-color: theme-color("primary") !important;
+  }
+}
+
+.main-header {
     @extend .navbar;
     @extend .navbar-expand-lg;
     @extend .navbar-dark;
     @extend .fixed-top; // @extend .bg-primary;
-    transition: transform 0.10s;
-    margin-top: 0px;
-    background-color: rgba(theme-color("primary"), 0.90);
+    
+    margin-top: 0 !important;
+
     .container {
-        padding-top: 1rem;
-        padding-bottom: 1rem;
+        padding-top: 0 !important;
+        padding-bottom: 0 !important;
     }
+
     a {
         color: $white !important;
         &:hover {
@@ -46,7 +36,8 @@ nav.main-header {
         }
     }
 }
-.nav-item {
+
+a.nav-link {
     color: $white;
     font-family: 'IBM Plex Sans Condensed', sans-serif;
 }
@@ -54,17 +45,17 @@ nav.main-header {
     @extend .collapse;
     @extend .navbar-collapse;
     @extend .justify-content-end;
+    
     ul {
         @extend .navbar-nav;
         li {
-            a {
-                @extend .nav-link;
-                font-size: 0.9rem !important;
-            }
+          a {
+              @extend .nav-link;
+          }
 
-            a.github {
-              font-size: 1.4rem;
-            }
+          a.github {
+            font-size: 1.4rem;
+          }
         }
     }
 }
